<resources>
    <string name="app_name">Badger Budget Buddy</string>
    <string name="home_text"> Home </string>
    <string name="curr_user"> Current User:  Bucky Badger</string>
    <string name="curr_acct"> Current Account:  Checking</string>
    <string name="switch_acct"> Switch Account  </string>
    <string name="view_receipt"> View Receipts  </string>
    <string name="recent_transac"> View Recent Transactions  </string>
    <string name="go_back">Go Back</string>
    <string name="account_balance">Account Balance: </string>
    <string name="badger_welcome">Hello Badger!</string>
    <string name="record_transac">+ Record Another Transaction</string>
    <string name="checking">Checking</string>
    <string name="savings">Savings</string>
    <string name="placeholder">Placeholder Value</string>
    <string name="record_your_transaction">Record Your Transaction!</string>
    <string name="submit_transac">Submit Transaction</string>
    <string name="enter_quantity">Enter Quantity ($)</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Open Camera</string>
    <string name="bbb">Badger Budget Buddy</string>
    <string-array name="category_array">
        <item>Food</item>
        <item>School Supplies</item>
        <item>Recreation</item>
        <item>Rent</item>
        <item>Tuition</item>
        <item>Clothing</item>
        <item>Emergency</item>
        <item>Other</item>
    </string-array>

    <string-array name="account_array">
        <item>Checking</item>
        <item>Savings</item>
    </string-array>

</resources>